# seq2seq-vc

./: .gitignore  README.md  setup.cfg
egs/arctic/: README.md
egs/arctic/vc1/: README.md  (+1 more)
egs/l2-arctic/: README.md
seq2seq_vc/collaters/: __init__.py  ar_tts.py  ar_vc.py  glow_tts.py  nar_vc.py
seq2seq_vc/datasets/: __init__.py  audio_mel_dataset.py  dataset.py  tts_dataset.py
seq2seq_vc/evaluate/: dtw_based.py
seq2seq_vc/layers/: positional_encoding.py
seq2seq_vc/losses/: __init__.py  duration_predictor_loss.py  forward_sum_loss.py  guided_attention_loss.py  l1_loss.py  mle_loss.py  seq2seq_loss.py
seq2seq_vc/models/: __init__.py  aas_vc.py  fastspeech_vc.py  glow_tts.py  mas_vc.py  transformer_tts.py  vtn.py
seq2seq_vc/modules/: alignments.py  duration_predictor.py  length_regulator.py  pre_postnets.py
seq2seq_vc/schedulers/: warmup_lr.py
seq2seq_vc/text/: build_tokenizer.py  char_tokenizer.py  cleaner.py  phoneme_tokenizer.py  token_id_converter.py  word_tokenizer.py
seq2seq_vc/trainers/: __init__.py  aas_vc.py  ar_tts.py  ar_vc.py  base.py  glow_tts.py  mas_vc.py  nar_vc.py
seq2seq_vc/urhythmic/: dataset.py  model.py  rhythm_model.py  segmenter.py  stretcher.py  urhythmic_convert.py  urhythmic_encode.py  urhythmic_fine_tune_vocoder.py  urhythmic_resample.py  urhythmic_segment.py  urhythmic_train_rhythm_model.py  utils.py  vocoder.py
seq2seq_vc/utils/: __init__.py  encodec.py  model_io.py  types.py  utils.py
seq2seq_vc/vocoder/: griffin_lim.py  s3prl_feat2wav.py  vocoder.py
tools/: Makefile
utils/: hf_download.py  parse_textgrid.py
(+73 files in other folders)
